--- a/XP.html
+++ b/XP.html
@@ -11,7 +11,7 @@
         <nav class="navbar">
         
             <ul>
-                <li><a href= "Portfolio_homepage.html">Home</a></li>
+                <li><a href= "index.html">Home</a></li>
                 <li><a href="XP.html">Experiences</a></li>
                 <li><a href="Achievements.html">Achievements</a></li>
                 <li><a href="Skills.html">Skills</a></li>
