--- a/HMGICS.html
+++ b/HMGICS.html
@@ -1,1 +1,52 @@
-<p>test</p>
+<head>
+    <link rel = "stylesheet" href="HMGICS.css">
+
+    </link>
+    <meta charset="UTF-8">
+    <title>HMGICS Work Attachment</title>
+</head>
+<body>
+    <nav class="navbar">
+    
+        <ul>
+            <li><a href= "index.html">Home</a></li>
+            <li><a href="XP.html">Experiences</a></li>
+            <li><a href="Achievements.html">Achievements</a></li>
+            <li><a href="Skills.html">Skills</a></li>
+        </ul>
+    </nav>
+    <div class = "page_title">
+        <h1>Work Attachment @ HMGICS</h1>
+    </div>
+
+    <div class = "image-gallery">
+        <img src="WhatsApp Image 2023-12-13 at 18.41.37 (1) (1).jpeg" alt="HMGICS"></img>
+    </div>
+
+    <div class = "heading1">
+        <h2>My Experience</h2>
+    </div>
+    <div class = "main-text">
+        <p>In December 2023, I was one of a few fortunate individuals who were selected by SST to go to the newly established Hyundai 
+            Motor Group Innovation Centre Singapore (HMGICS) for a work attachment. The 3 day long programme was an insightful one where 
+            I got to learn about the history of the Hyundai Company, whilst also understanding more about their business model, touring 
+            the factory and R&D centres as well as how they operated as an organisation. As part of the work attachment, we were guided by 
+            our mentors and were tasked in coming up with a new way to heighten the Customer Experience (CX) of HMGICS. My team and I eventually 
+            came up with a solution to integrate up and coming technologies such as Virtual Reality as well as Robotics, something Hyundai 
+            specialises in, to keep children of the visitors entertained, allowing parents to have uninterrupted time to tour the factory and make 
+            decisions in purchasing a vehicle. Furthermore, we planned to enhance the customer tour experience with the introduction of robots as 
+            tour guides to provide a unique and futuristic experience whilst also reducing manpower demand on the tour segment, allowing Hyundai to 
+            focus their resources elsewhere. </p>
+    </div>
+
+    <div class = "heading1">
+        <h2>Reflection</h2>
+    </div>
+
+    <div class = "main-text">
+        <p>Through this experience, I have been very fortunate and grateful to my teachers and mentors for allowing me to experience such a unique interaction.
+             I have gained greater insight into things such as company recruitment requirements, industrial operations, importance of an integrated network of 
+             smart sensors in an industrial setting and most importantly, interaction and networking with professionals more in depth in the customer experience 
+             and human resource aspect in planning, considering and curating an unforgettable experience for customers. </p>
+    </div>
+</body>
