--- a/VIA2023.html
+++ b/VIA2023.html
@@ -3,7 +3,7 @@
 
 <head>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="IPT.css">
+    <link rel="stylesheet" href="VIA2023.css">
     <style>
         /* Custom styles to hide/show carousel items */
         .carousel-item {
@@ -35,7 +35,7 @@
         }
     </style>
     <meta charset="UTF-8">
-    <title>2024 IPT</title>
+    <title>2023 VIA</title>
 </head>
 
 <body>
@@ -49,7 +49,7 @@
     </nav>
 
     <div class="page_title">
-        <h1>2024 Integrated Performance Task</h1>
+        <h1>S3-03 Service Learning Project Beach Cleanup @ East Coast Park</h1>
     </div>
 
     <div class="relative w-3/5 h-[70vh] bg-gray-800 rounded-lg shadow-lg p-4 mx-auto mt-5">
@@ -57,22 +57,22 @@
         <div class="carousel h-full">
           <div class="carousel-item active">
             <div class="h-full">
-              <img src="IPT1.jpeg" class="w-full h-full rounded-lg object-cover" alt="IPT1">
+              <img src="beach1.jpeg" class="w-full h-full rounded-lg object-cover" alt="beach1">
             </div>
           </div>
           <div class="carousel-item">
             <div class="h-full">
-              <img src="IPT2.jpeg" class="w-full h-full rounded-lg object-cover" alt="IPT2">
+              <img src="beach2.jpeg" class="w-full h-full rounded-lg object-cover" alt="beach2">
             </div>
           </div>
           <div class="carousel-item">
             <div class="h-full">
-              <img src="IPT3.jpeg" class="w-full h-full rounded-lg object-cover" alt="IPT3">
+              <img src="beach3.jpeg" class="w-full h-full rounded-lg object-cover" alt="beach3">
             </div>
           </div>
           <div class="carousel-item">
             <div class="h-full">
-              <img src="IPT4.jpeg" class="w-full h-full rounded-lg object-cover" alt="IPT4">
+              <img src="beach4.jpeg" class="w-full h-full rounded-lg object-cover" alt="beach4">
             </div>
           </div>
         </div>
@@ -84,24 +84,23 @@
     <!-- End of Image Carousel Section -->
 
     <div class="heading1">
-        <h2>About the task</h2>
+        <h2>My Experience</h2>
     </div>
     <div class="main-text">
-        <p>With the rise of global temperatures due to global warming, the frequency and intensity of natural disasters have followed suit, indicating that thousands of lives are lost through this process. One such example are earthquakes, a destructive phenomenon that collapses buildings and makes search and rescue extremely difficult. How would nations, such as the earthquake prone Japan, with limited manpower, conduct effective search and rescue over a large disaster zone?  </p>
+        <p>In February 2023, as part of the upper secondary's class service learning project where the school aims for students to serve the community through these projects, my class decided to carry out a beach cleanup at east coast park. We chose a beach cleanup because we had the manpower to have a significant impact on the beach through direct service, making the beach a cleaner place for all. </p>
     </div>
     <div class="main-text">
-        <p><br>Well, that is where the Integrated Performance Task comes in, to help solve these issues and give students a chance in solving a major real world problem. Our task, was to create an autonomous robot system, that is able to map out and navigate a given disaster zone via infrared sensors to track black lines, and carry out effective search and rescue missions. Through identifying, recognising and differentiating objects such as humans and debri, the robot will then execute certain tasks preprogrammed into its memory chip. This allows search and rescue teams with limited manpower to cover the most amount of ground within the smallest time frame possible. </br></p>
+        <p><br>Before we could conduct the actual cleanup, we had to submit a proposal to the schoolboard, including logistical planning on the date and equipment needed while requesting NParks for permission to clean the beaches.</br></p>
     </div>
     <div class="main-text">
-        <p><br>As the Computing+ student of my group, I had the responsibility of managing the software necessary for the operations as well as the integration between hardware and software. To be more specific, we trained a machine learning algorithm that could distinguish objects on teachable machine, with multiple iterations, epochs and different learning rates to make the most accurate model possible. Then, we had to enable the machine learning model, which is being run by the powerful Raspberri Pi, to be able to transmit what it recognises to the Arduino such that the Arduino can execute instructions accordingly. This 2 way communication between microcontroller and computer was essential for the robot functioning as a whole and I was able to seamlessly integrate the raspberry pi with the arduino. <br></p>
+        <p><br>Next, on the day of the beach cleanup itself, we spent 4 hours cleaning up the beach, covering a large section of East Coast Park. What I was surprised to find is that there were many forms of trash, from abandoned food, random vases, flip-flops and cigarette butts, I was not expecting a beach to be this heavily polluted by Singaporeans. <br></p>
     </div>
-
     <div class="heading1">
         <h2>Reflection</h2>
     </div>
 
     <div class="main-text">
-        <p>This performance task was one of the most unique and complex performance task that we have embarked on, it required me to put my skills to the test, from my programming skills to my limited electronics skills, all of which were necessary to ensure the robot would run smoothly. Through this performance task, I have gained a greater appreciation for robotics engineers as I have understood that robots are not easy to make and programme, but it has also brewed an interest of robotics within me. I have grown from this, improved my coding skills significantly as well as learning more about 2 way communication systems.</p>
+        <p>This experience enabled me to improve my leadership skills, where I had to lead the class with my form teacher and fellow ACE leader in the project, as well as my planning skills for large events such as these to distribute workload amongst classmates and prepare for the event logistically. It has also enabled me to appreciate the work cleaners put in to keep Singapore clean, it was not easy to clean that much trash from the beach and it made me amazed at how much effort our cleaners put to keeping our nation clean.</p>
     </div>
 
     <script>
