--- a/VIA2024.html
+++ b/VIA2024.html
@@ -3,7 +3,7 @@
 
 <head>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="IPT.css">
+    <link rel="stylesheet" href="VIA2024.css">
     <style>
         /* Custom styles to hide/show carousel items */
         .carousel-item {
@@ -35,7 +35,7 @@
         }
     </style>
     <meta charset="UTF-8">
-    <title>2024 IPT</title>
+    <title>S4-03 Service Learning Project @ Willing Hearts</title>
 </head>
 
 <body>
@@ -49,7 +49,7 @@
     </nav>
 
     <div class="page_title">
-        <h1>2024 Integrated Performance Task</h1>
+        <h1>S4-03 Service Learning Project @ Willing Hearts</h1>
     </div>
 
     <div class="relative w-3/5 h-[70vh] bg-gray-800 rounded-lg shadow-lg p-4 mx-auto mt-5">
@@ -57,22 +57,22 @@
         <div class="carousel h-full">
           <div class="carousel-item active">
             <div class="h-full">
-              <img src="IPT1.jpeg" class="w-full h-full rounded-lg object-cover" alt="IPT1">
+              <img src="Willing1.jpeg" class="w-full h-full rounded-lg object-cover" alt="Willing1">
             </div>
           </div>
           <div class="carousel-item">
             <div class="h-full">
-              <img src="IPT2.jpeg" class="w-full h-full rounded-lg object-cover" alt="IPT2">
+              <img src="Willing2.jpeg" class="w-full h-full rounded-lg object-cover" alt="Willing2">
             </div>
           </div>
           <div class="carousel-item">
             <div class="h-full">
-              <img src="IPT3.jpeg" class="w-full h-full rounded-lg object-cover" alt="IPT3">
+              <img src="Willing3.jpeg" class="w-full h-full rounded-lg object-cover" alt="Willing3">
             </div>
           </div>
           <div class="carousel-item">
             <div class="h-full">
-              <img src="IPT4.jpeg" class="w-full h-full rounded-lg object-cover" alt="IPT4">
+              <img src="Willing4.jpeg" class="w-full h-full rounded-lg object-cover" alt="Willing4">
             </div>
           </div>
         </div>
@@ -84,16 +84,13 @@
     <!-- End of Image Carousel Section -->
 
     <div class="heading1">
-        <h2>About the task</h2>
+        <h2>My Experience</h2>
     </div>
     <div class="main-text">
-        <p>With the rise of global temperatures due to global warming, the frequency and intensity of natural disasters have followed suit, indicating that thousands of lives are lost through this process. One such example are earthquakes, a destructive phenomenon that collapses buildings and makes search and rescue extremely difficult. How would nations, such as the earthquake prone Japan, with limited manpower, conduct effective search and rescue over a large disaster zone?  </p>
+        <p>As part of a yearly tradition, every upper secondary class in SST is required to conduct a service learning project of sorts to deepen our connection and understanding whilst serving the community. As such, my class decided to go to willing hearts to prepare and pack food in a soup kitchen to give back to the community and help those in need.</p>
     </div>
     <div class="main-text">
-        <p><br>Well, that is where the Integrated Performance Task comes in, to help solve these issues and give students a chance in solving a major real world problem. Our task, was to create an autonomous robot system, that is able to map out and navigate a given disaster zone via infrared sensors to track black lines, and carry out effective search and rescue missions. Through identifying, recognising and differentiating objects such as humans and debri, the robot will then execute certain tasks preprogrammed into its memory chip. This allows search and rescue teams with limited manpower to cover the most amount of ground within the smallest time frame possible. </br></p>
-    </div>
-    <div class="main-text">
-        <p><br>As the Computing+ student of my group, I had the responsibility of managing the software necessary for the operations as well as the integration between hardware and software. To be more specific, we trained a machine learning algorithm that could distinguish objects on teachable machine, with multiple iterations, epochs and different learning rates to make the most accurate model possible. Then, we had to enable the machine learning model, which is being run by the powerful Raspberri Pi, to be able to transmit what it recognises to the Arduino such that the Arduino can execute instructions accordingly. This 2 way communication between microcontroller and computer was essential for the robot functioning as a whole and I was able to seamlessly integrate the raspberry pi with the arduino. <br></p>
+        <p><br> Willing hearts is a non-profitable organisation run by volunteers that prepares cooks and distributes about 7000 daily meals islandwide. We chose to volunteer at Willing Hearts as they were full run by volunteers, with actvities that required little training and had a genuinely meaningful impact on the community. At willing hearts, our large class was able to fulfill manpower needs by helping out in every part of the soup kitchen aside the cooking stations, we washed and prepared rice, vegetables, fish, meat, whilst also packing cooked dishes into plastic boxes that were meant to be distributed.</br></p>
     </div>
 
     <div class="heading1">
@@ -101,7 +98,7 @@
     </div>
 
     <div class="main-text">
-        <p>This performance task was one of the most unique and complex performance task that we have embarked on, it required me to put my skills to the test, from my programming skills to my limited electronics skills, all of which were necessary to ensure the robot would run smoothly. Through this performance task, I have gained a greater appreciation for robotics engineers as I have understood that robots are not easy to make and programme, but it has also brewed an interest of robotics within me. I have grown from this, improved my coding skills significantly as well as learning more about 2 way communication systems.</p>
+        <p>Volunteering at Willing Hearts has opened my worldview, it has shown me how many people were in desperate need of aid in Singapore, the kindness and empathy of volunteers at Willing Hearts, people who were willing to take out precious time in their free time to volunteer and help out those in need, the amount of consideration in preparing food that the benefeciaries can consume as well as the passion that everyone had. I made me grateful that there were such people helping others in need. Through this experience, I was able to also improve my coordination skills when getitng the class to plan for the session.</p>
     </div>
 
     <script>
