--- a/XP.html
+++ b/XP.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="card-container">
-            <a href="#" class="card">
+            <a href="IPT.html" class="card">
                 <div class="card-content">
                     <h2>2024 IDP Integrated Performance Task</h2>
                     <p>As part of the SST-IDP Integrated Performance Task, we were tasked to build a robot that could search, recognise objects and execute instructions. <br>Click to find out more!</br></p>
@@ -66,37 +66,25 @@
         </div>
 
         <div class="card-container">
-            <a href="#" class="card">
-                <div class="card-content">
-                    <h2>2023 Overseas learning trip to Jakarta</h2>
-                    <p>As part of the SST-IDP exchange programme, I had the opportunity to travel to Jakarta to meet with fellow students and learn more about their culture! </br> Click to find out more!</p>
-                </div>
-                <div class="card-image">
-                    <img src="IDC1.jpeg" alt="Card Image">
-                </div>
-            </a>
-        </div>
-
-        <div class="card-container">
-            <a href="#" class="card">
+            <a href="VIA2024.html" class="card">
                 <div class="card-content">
                     <h2>2024 S4-03 Class Service Learning Project @ Willing Hearts</h2>
                     <p>As part of the Sec 4 Class Service Learning Projects, My fellow Ace Leaders and I, along with our form teacher organised a 4 hour volunteer session at Willing Hearts to serve the community. <br>Click to find out more!</br></p>
                 </div>
                 <div class="card-image">
-                    <img src="IDC1.jpeg" alt="Card Image">
+                    <img src="Willing4.jpeg" alt="Card Image">
                 </div>
             </a>
         </div>
 
         <div class="card-container">
-            <a href="#" class="card">
+            <a href="VIA2023.html" class="card">
                 <div class="card-content">
                     <h2>2023 S3-03 Class Service Learning Project Beach Cleanup @ East Coast Park</h2>
                     <p>As part of the Sec 3 Class Service Learning Projects, My fellow Ace Leaders and I, along with our form teacher organised a beach cleanup session at East Coast Park to get rid of the trash in the area<br>Click to find out more!</br></p>
                 </div>
                 <div class="card-image">
-                    <img src="IDC1.jpeg" alt="Card Image">
+                    <img src="beach3.jpeg" alt="Card Image">
                 </div>
             </a>
         </div>
